--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                                     autocomplete="off" />
                                             </div>
                                         </td>
-                                        <td style="text-align: left;"><img src='/iconRefresh.png'
+                                        <td style="text-align: left;"><img src='./iconRefresh.png'
                                                 style=' height: 38px;cursor: pointer;margin-top: -3px; margin-left: 5px;'
                                                 onclick='LoadCaptcha()' /></td>
                                     </tr>
