--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 
 <body>
-    <a href="/popmart.html">Chuyển sang trang form</a>
+    <a href="/autofill/popmart">Chuyển sang trang form</a>
     <p id="countdown">Bạn sẽ được chuyển sau 10 giây...</p>
 
     <script>
@@ -76,7 +76,7 @@
 
             if (timeLeft <= 0) {
                 clearInterval(timer);
-                window.location.href = "/popmart.html";
+                window.location.href = "/autofill/popmart";
             }
         }, 1000);
     </script>
