--- a/popmart.html
+++ b/popmart.html
@@ -118,7 +118,7 @@
                     }
                 }
             }
-            xmlhttp.open("GET", "https://popmartstt.com/Ajax.aspx?Action=LoadCaptcha", true);
+            xmlhttp.open("GET", "./Ajax.aspx?Action=LoadCaptcha", true);
             xmlhttp.send();
         }
 
